--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 notebooks/L12_plotting_visualization/aapl_iPhone_annoucements.png
 notebooks/L12_plotting_visualization/aapl_iPhone_annoucements.pdf
 notebooks/L12_plotting_visualization/aapl_iPhone_annoucements.jpeg
+notebooks/L08_sql/*.parquet
+notebooks/L08_sql/*.db
